# Sistem-Monitoring-Budidaya-Jamur-Tiram

./: .sensor_simulator.py.swp  README.md  sensor_simulator.py  sensor_simulator.py.save
QT/: config.json  main.py
QT/jamur.venv/: pyvenv.cfg
blockchain-monitoring/: package-lock.json  package.json
blockchain-monitoring/contracts/: Greeter.sol  Monitoring.sol
blockchain-monitoring/frontend-dapp/: app.js  config.js  index.html  style.css
blockchain-monitoring/scripts/: deploy.js
dapp2/: app.js  index.html  style.css
modbus_client/: Cargo.toml  modpoll-3.16.tgz
modbus_client/modpoll/: README.txt
modbus_client/modpoll/aarch64-linux-gnu/: modpoll
modbus_client/modpoll/arm-linux-gnueabihf/: modpoll
modbus_client/modpoll/armv6-rpi-linux-gnueabihf/: modpoll
modbus_client/modpoll/i686-linux-gnu/: modpoll
modbus_client/modpoll/x86_64-linux-gnu/: modpoll
modbus_client/src/: main.rs
rust_tcp_blockchain/: Cargo.toml
rust_tcp_blockchain/abi/: Monitoring.json
rust_tcp_blockchain/src/: main.rs
tcp_server/: Cargo.toml
tcp_server/src/: main.rs
