[package]
name = "tcp-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
influxdb2 = "0.3"
futures = "0.3"
chrono = "0.4" 
ethers = { version = "2.0", features = ["legacy"] } # <-- BARU
dotenv = "0.15"